--- a/.github/workflows/docker-cli.yml
+++ b/.github/workflows/docker-cli.yml
@@ -1,11 +1,21 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: Docker CI pipeline
+run-name: ${{ github.actor }} is running Docker CI pipeline
 on: [push]
 jobs:
-  one-credit-seesion:
+  docker-ci-pipeline:
     runs-on: ubuntu-latest
     steps:
-      - name: Docker cmnds
-      - run: echo "docker cli cmnds."
-      - name: Documentaion
-      - run: echo "Documented in github wiki"
+      - name: Checkout repo
+        uses: actions/chechout@v4
+
+       - name: Login to Docker Hub
+         uses: docker/login-action@v3
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+        - name: DOCKER BUILD
+          - run: docker build -t hanish1103k/my-flask-app .
+      
+        - name: Docker push
+          - run: docker push hanish1103k/my-flask-app
